--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: "BCEM" # the website title (if blank, full name will be used instead)
 first_name: "BCEM"
 middle_name: 
 last_name: "@ Uniandes"
-email: # a.reyes@uniandes.edu.co
+email: a.reyes@uniandes.edu.co
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 icon: bcem_logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
