--- a/_data/en-us/strings.yml
+++ b/_data/en-us/strings.yml
@@ -141,5 +141,8 @@ search:
   theme: Theme
 selected_publications: selected publications
 site_description: A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-interests: Interests
-started: started
+team: 
+  interests: Interests
+  started: started
+research:
+  highlights: Highlights
