--- a/_data/es-es/strings.yml
+++ b/_data/es-es/strings.yml
@@ -9,7 +9,7 @@ categories:
 citation:
   bibtex: "o como cita en BibTeX:"
   introduction: "Si le ha resultado útil, por favor, cite cómo:"
-contact_note: Incluso puede añadir una pequeña nota sobre cuál de ellas es la mejor forma de ponerse en contacto con usted.
+contact_note: "Donde encontrarnos :blush::v:"
 cv:
   address: Dirección
   area: Área
