--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ last_name: "@ Uniandes <span class='fi fi-co'></span>"
 email: a.reyes@uniandes.edu.co
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 icon: bcem_logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon_nt: bcem_logo_nt_white.png
 
 url: https://BCEM-UniAndes.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -87,7 +88,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: # your Google Scholar ID
+scholar_userid: hbXF8UEAAAAJ # your Google Scholar ID
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
