--- a/_config.yml
+++ b/_config.yml
@@ -188,6 +188,9 @@ collections:
   team:
     output: true
     permalink: /:collection/:title/
+  teaching:
+    output: true
+    permalink: /:collection/:title/
 
 announcements:
   enabled: true
@@ -385,7 +388,7 @@ external_links:
 # -----------------------------------------------------------------------------
 
 languages: ["en-gb", "es-es"]
-default_lang: "en-gb"
+default_lang: "es-es"
 exclude_from_localization: ["assets"]
 lang_from_path: true
 country_flag: true # set true for allowing flag symbol in language toggle
