--- a/_config.yml
+++ b/_config.yml
@@ -388,7 +388,7 @@ external_links:
 # -----------------------------------------------------------------------------
 
 languages: ["en-gb", "es-es"]
-default_lang: "es-es"
+default_lang: "en-gb"
 exclude_from_localization: ["assets"]
 lang_from_path: true
 country_flag: true # set true for allowing flag symbol in language toggle
