team es typo fixed

--- a/_data/en-gb/research.yml
+++ b/_data/en-gb/research.yml
@@ -31,7 +31,7 @@
     - name: Nutrients
       year: 2020
       doi: 10.3390/nu12102938
-- title: Ecological virus-host relationships in the human gut
+- title: Omics
   align: right
   image: research/Nature_Cover_2010.jpg
   image_circular: false # crops the image to make it circular
@@ -63,7 +63,7 @@
     - name: mSystems
       year: 2022
       doi: 10.1128/msystems.00326-22
-- title: Characterization of virome and viral genomes
+- title: Viromics
   align: left
   image: research/Virus_2.png
   image_circular: false # crops the image to make it circular
@@ -93,3 +93,35 @@
     - name: PLoS Comput. Biol.
       year: 2023
       doi: 10.1371/journal.pcbi.1011422
+- title: Training in Bioinformatics
+  align: right
+  image: research/Nature_Cover_2010.jpg
+  image_circular: false # crops the image to make it circular
+  content: >
+    The human gut microbiota is the set of all organisms living in the human 
+    gastrointestinal tract. This amazingly diverse community is composed of 
+    the 3 domains of life and their respective viruses. Since the emergence 
+    of molecular techniques for the study of microbial communities, the gut 
+    microbiota has been a major target of study and large consortia such as 
+    the HMP in the USA and MetaHIT in Europe have devoted a great deal of 
+    resources to characterize these communities. However, the major effort 
+    to study these communities has been made on their prokaryotic component 
+    ignoring for the most part the viral component. In fact, this component 
+    may be greater in number and diversity than the bacterial component itself. 
+    Viruses are present in any environment where a potential host is found and 
+    their predation dynamics, lytic or lysogenic cycles can have important 
+    consequences on the dynamics and behavior of the community in general. The 
+    study and characterization of the relationships between viruses (with 
+    bacterial or eukaryotic hosts) and their diverse implications in the 
+    community and therefore their consequences in the health of the human host, 
+    are an important objective of the group's research.
+  highlights:
+    - name: iScience
+      year: 2023
+      doi: 10.1016/j.isci.2023.106007
+    - name: Cell host & microbe
+      year: 2019
+      doi: 10.1016/j.chom.2019.01.019
+    - name: mSystems
+      year: 2022
+      doi: 10.1128/msystems.00326-22
