team es typo fixed

--- a/_data/es-es/research.yml
+++ b/_data/es-es/research.yml
@@ -34,7 +34,7 @@
     - name: Nutrients
       year: 2020
       doi: 10.3390/nu12102938
-- title: Relaciones ecológicas virus-hospedero en el intestino humano
+- title: Ómicas
   align: right
   image: research/Nature_Cover_2010.jpg
   image_circular: false # crops the image to make it circular
@@ -68,7 +68,7 @@
     - name: mSystems
       year: 2022
       doi: 10.1128/msystems.00326-22
-- title: Caracterización de viromas y genomas virales
+- title: Virómica
   align: left
   image: research/Virus_2.png
   image_circular: false # crops the image to make it circular
@@ -101,3 +101,37 @@
     - name: PLoS Comput. Biol.
       year: 2023
       doi: 10.1371/journal.pcbi.1011422
+- title: Entrenamiento en Bioinformática
+  align: right
+  image: research/Nature_Cover_2010.jpg
+  image_circular: false # crops the image to make it circular
+  content: >
+    La microbiota intestinal humana es elconjunto de todos los organismos que 
+    viven en el tracto gastrointestinal del ser humano. Esta asombrosamente 
+    diversa comunidad está compuesta por los 3 dominios de la vida y sus 
+    respectivos virus. Desde el surgimiento de las técnicas moleculares para 
+    el estudio de comunidades microbianas, la microbiota intestinal ha sido uno 
+    de los principales blancos de estudio y grandes consorcios como el HMP en 
+    EE.UU. y el MetaHIT en Europa han dedicado una gran cantidad de recursos 
+    en caracterizar estas comunidades. Sin embargo, el mayor esfuerzo de 
+    estudio de estas comunidades se ha realizado en su componente procariote 
+    ignorando en su mayor parte el componente viral. De hecho, este componente 
+    puede ser mayor en número y diversidad que el mismo componente bacteriano. 
+    Los virus están presentes en cualquier ambiente donde se encuentre un 
+    potencial hospedero y sus dinámicas de predación, ciclos líticos o 
+    lisogénicos pueden tener importantes consecuencias en las dinámicas y 
+    comportamiento de la comunidad en general. El estudio y caracterización de 
+    las relaciones entre virus (con hospederos bacterianos o eucariotes) y sus 
+    diversas implicaciones en la comunidad y por ende sus consecuencias en la 
+    salud del hospedero humano, son un objetivo importante de la investigación 
+    del grupo.
+  highlights:
+    - name: iScience
+      year: 2023
+      doi: 10.1016/j.isci.2023.106007
+    - name: Cell host & microbe
+      year: 2019
+      doi: 10.1016/j.chom.2019.01.019
+    - name: mSystems
+      year: 2022
+      doi: 10.1128/msystems.00326-22
